Add more details to programming skills section.

--- a/moderncv_tex/mycv-en.tex
+++ b/moderncv_tex/mycv-en.tex
@@ -39,7 +39,7 @@
 \familyname{Su}
 %\title{简历题目 (可选项)}                      % 可选项、如不需要可删除本行
 %\address{街道及门牌号}{邮编及城市}             % 可选项、如不需要可删除本行
-\mobile{+86~xxxxxxxxxxx}                         % 可选项、如不需要可删除本行
+\mobile{+86~18665875205}                         % 可选项、如不需要可删除本行
 %\phone{+2~(345)~678~901}                          % 可选项、如不需要可删除本行
 %\fax{+3~(456)~789~012}                            % 可选项、如不需要可删除本行
 \email{suzp1984@gmail.com}                    % 可选项、如不需要可删除本行
@@ -77,19 +77,19 @@
 \cvitem{Azure}{\small \href{https://www.credly.com/badges/994162df-3872-424d-9d6f-de9aa7cd1d8e/public_url}{\color{blue}{Azure Administrator Associate credly badges}}}
 \cvitem{AWS}{\small \href{https://www.credly.com/badges/5daf7d14-4063-4c4e-abb2-60abf358067a/public_url}{\color{blue}{AWS Certified Solutions Architect - Associate credly badges}}}
 \cvitem{Linux}{Using Linux from OpenSUSE(check my Avatar), then Ubuntu, Fedora.}
-\cvitem{Java}{8+ Years Android App \& System Programming experience.}
+\cvitem{C/C++}{Android system HAL layer dev and android NDK dev experience.}
+\cvitem{Java|Kotlin}{8+ Years Android App \& System Programming experience.}
+\cvitem{Swift}{2+ Years iOS/Mac app dev experience.}
+\cvitem{Vue2}{Familiar with Vue2 and mobile side hybrid dev.}
+\cvitem{Opengl|Metal}{Graphics Rendering experience.}
 \cvitem{.net core}{Limited experience with .net core and azure app service.}
 \cvitem{SQL}{SQLite in mobile and MySQL}
-\cvitem{Vue2}{Familiar with Vue2 and mobile side hybrid dev.}
-\cvitem{Android NDK}{\small \href{https://github.com/suzp1984/jbig-android}{\color{blue}{jbig android}}}
 \cvitem{github}{\small \href{https://github.com/suzp1984}{\color{blue}{https://github.com/suzp1984}}}
-\cvitem{Languages}{\small Kotlin, Java, Rust, C/C++, Swift, Emacs Lisp, Python, Javascript, Shell, \LaTeX{}}
-\cvitem{OS} {Android, Linux, Mac OS X}
-\cvitem{Editor}{Emacs, Android Studio, VS Code}
+\cvitem{Editor}{Emacs, Android Studio, xcode, VS Code}
 
 \section{Working Experience}
 
-\cventry{2021.07 - now\hspace{2.0mm}}{Etteplan Beijing}{ABB outsource}{Beijing}{}{%
+\cventry{2021.07 - 2023.08\hspace{2.0mm}}{Etteplan Beijing}{ABB outsource}{Beijing}{}{%
 }
 \cvitem{Position}{%
 \begin{itemize}
@@ -103,13 +103,6 @@
 \item {\small \emph {JS modules embeded inside ABB's Drivetuen App}}
 \item {\small \emph {Azure DevOps Pipeline maintain \& dev}}
 \end{itemize}
-}
-\vspace{0.0mm}
-\cventry{2021.06 - 2021.07\hspace{2.0mm}}{LIEPT}{}{ZiBo, ShanDong}{}{}
-\cvitem{Position}{%
-  \begin{itemize}
-    \item {\small \emph {Mobile app engineer}}
-  \end{itemize}
 }
 
 \vspace{0.0mm}
@@ -199,8 +192,8 @@
 \vspace{5mm}
 \cvitem{}{%
   \begin{itemize}
-  \item I look forward to works in Rust, C/C++ as main programming language.
-  \item I look forward to works in GPU programming field.
+  \item I look forward to works in C/C++ dev for mobile platforms (Android \& iOS);
+  \item I look forward to works in GPU programming field, e.g. Opengl and Metal.
   \item I look forward to participating in a pioneering and cutting edge project.
 \end{itemize}
 }
@@ -209,7 +202,7 @@
 \vspace{5mm}
 \subsection{ABB Drivetune}
 \vspace{3mm}
-\cventry{2021.08 - now\hspace{2.8mm}}{ABB Drivetune App}{}{}{}{%
+\cventry{2021.07 - 2023.08\hspace{2.0mm}}{ABB Drivetune App}{}{}{}{%
 }
 \vspace{1mm}
 \cvitem{Description:}{%
@@ -224,7 +217,7 @@
 \vspace{5mm}
 \subsection{Learn Metal}
 \vspace{3mm}
-\cventry{2021.02 - 2021.06\hspace{2.8mm}}{Personal Project}{}{}{}{%
+\cventry{2021.02 - 2021.06\hspace{2.0mm}}{Personal Project}{}{}{}{%
 Metal  
 }
 \vspace{1mm}
