--- a/moderncv_tex/mycv-zh.tex
+++ b/moderncv_tex/mycv-zh.tex
@@ -39,7 +39,7 @@
 \familyname{振兴}
 %\title{简历题目 (可选项)}                      % 可选项、如不需要可删除本行
 %\address{街道及门牌号}{邮编及城市}             % 可选项、如不需要可删除本行
-\mobile{+86~xxxxxxxxxxx}                         % 可选项、如不需要可删除本行
+\mobile{+86~18665875205}                         % 可选项、如不需要可删除本行
 %\phone{+2~(345)~678~901}                          % 可选项、如不需要可删除本行
 %\fax{+3~(456)~789~012}                            % 可选项、如不需要可删除本行
 \email{suzp1984@gmail.com}                    % 可选项、如不需要可删除本行
@@ -64,8 +64,8 @@
 \maketitle
 
 \section{教育背景}
-\cventry{2007.8 - 2010.7\hspace{2.8mm}}{硕士}{中科院金属所}{沈阳} {物理化学硕士学位} {} % {\textit{成绩}}{说明}  % 第3到第6编码可留白
-\cventry{2003.8 - 2007.7\hspace{2.8mm}}{学士}{烟台大学}{烟台} {应用物理学士学位} {} % {\textit{成绩}}{说明}
+\cventry{2007.08 - 2010.07\hspace{2.0mm}}{硕士}{中科院金属所}{沈阳} {物理化学硕士学位} {} % {\textit{成绩}}{说明}  % 第3到第6编码可留白
+\cventry{2003.08 - 2007.07\hspace{2.0mm}}{学士}{烟台大学}{烟台} {应用物理学士学位} {} % {\textit{成绩}}{说明}
 
 %\section{毕业论文}
 %\cvitem{题目}{\emph{题目}}
@@ -75,19 +75,20 @@
 \section{软件技能}
 \cvitem{Azure}{\small \href{https://www.credly.com/badges/994162df-3872-424d-9d6f-de9aa7cd1d8e/public_url}{\color{blue}{Azure Administrator Associate credly badges}}}
 \cvitem{AWS}{\small \href{https://www.credly.com/badges/5daf7d14-4063-4c4e-abb2-60abf358067a/public_url}{\color{blue}{AWS Certified Solutions Architect - Associate credly badges}}}
-\cvitem{Linux}{Using Linux from OpenSUSE(check my Avatar), then Ubuntu, Fedora.}
-\cvitem{Java}{8+ Years Android App \& System Programming experience.}
-\cvitem{.net core}{Limited experience with .net core and azure app service.}
+\cvitem{Linux}{Linux用户，从一开始的OpenSUSE(上面的Avatar) -> Ubuntu -> Fedora.}
+\cvitem{C/C++}{安卓系统HAL层和NDK开发经验}
+\cvitem{Java|Kotlin}{8年安卓应用开发和2年的安卓系统开发经验}
+\cvitem{Swift}{2年多iOS/Mac应用开发经验}
+\cvitem{Vue2}{有mobile hybrid端的开发经验，使用Vue2, CSS, Typescript, JS.}
+\cvitem{Opengl|Metal}{图形学相关开发经验}
+\cvitem{.net core}{对Azure云计算有了解，对于.Net Core技术栈有了解.}
 \cvitem{SQL}{SQLite in mobile and MySQL}
-\cvitem{Vue2}{Familiar with Vue2 and mobile side hybrid dev.}
 \cvitem{github}{\small \href{https://github.com/suzp1984}{\color{blue}{https://github.com/suzp1984}}}
-\cvitem{Languages}{\small Kotlin, Java, Rust, C/C++, Swift, Emacs Lisp, Python, Javascript, Shell, \LaTeX{}}
-\cvitem{OS} {Android, Linux, Mac OS X}
-\cvitem{Editor}{Emacs, Android Studio, VS Code}
+\cvitem{Editor}{Emacs, Android Studio, xcode, VS Code}
 
 \section{工作背景}
 % \subsection{专业}
-\cventry{2021.07 - now\hspace{2.0mm}}{Etteplan Beijing}{ABB 外包}{北京}{}{%
+\cventry{2021.07 - 2023.08\hspace{2.0mm}}{Etteplan Beijing}{ABB 外包}{北京}{}{%
 }
 \cvitem{职位}{%
 \begin{itemize}
@@ -102,13 +103,6 @@
 \item {\small \emph {Azure DevOps Pipeline 开发维护}}
 \end{itemize}
 }
-\vspace{0.0mm}
-\cventry{2021.06 - 2021.07\hspace{2.0mm}}{山东隆之智环保科技有限公司}{}{淄博, 山东}{}{}
-\cvitem{职位}{%
-  \begin{itemize}
-    \item {\small \emph {移动开发工程师}}
-  \end{itemize}
-}
 
 \vspace{0.0mm}
 \cventry{2020.11 - 2021.07\hspace{2.0mm}}{独立开发者}{}{}{}{}
@@ -117,7 +111,7 @@
     \item {\small \emph {OpenGL, Metal, WebGL, Vulkan}}
   \end{itemize}
 }
-\cventry{2017.11 - 2020.10\hspace{2.8mm}}{厦门铃盛软件}{移动开发部}{厦门}{}{%
+\cventry{2017.11 - 2020.10\hspace{2.0mm}}{厦门铃盛软件}{移动开发部}{厦门}{}{%
 }
 \cvitem{职位}{%
 \begin{itemize}
@@ -132,7 +126,7 @@
 \end{itemize}
 }
 
-\cventry{2016.08 - 2017.11\hspace{2.8mm}}{英特尔(Intel) \& 迈克菲(McAfee)}{手机安全部}{深圳}{}{%
+\cventry{2016.08 - 2017.11\hspace{2.0mm}}{英特尔(Intel) \& 迈克菲(McAfee)}{手机安全部}{深圳}{}{%
 }
 \cvitem{职位}{%
 \begin{itemize}
@@ -152,7 +146,7 @@
 \end{itemize}
 }
 
-\cventry{2014.04 - 2016.04\hspace{2.8mm}}{深圳盒子支付}{研发部}{深圳}{}{%
+\cventry{2014.04 - 2016.04\hspace{2.0mm}}{深圳盒子支付}{研发部}{深圳}{}{%
 }
 \cvitem{职位}{%
 \begin{itemize}
@@ -168,7 +162,7 @@
 }
 
 
-\cventry{2010.04 - 2014.04\hspace{2.8mm}}{深圳鼎智通讯技术有限公司}{智能手机部门}{深圳}{}{%
+\cventry{2010.04 - 2014.04\hspace{2.0mm}}{深圳鼎智通讯技术有限公司}{智能手机部门}{深圳}{}{%
 }
 \cvitem{职位}{%
 \begin{itemize}
@@ -196,8 +190,8 @@
 \vspace{5mm}
 \cvitem{}{%
   \begin{itemize}
+  \item 期望从事安卓/iOS NDK/C++开发；
   \item 期望从事OpenGL, WebGL, Metal, Vulkan等GPU图形编程相关的工作；
-  \item 期望从事Rust编程相关的项目；
   \item 期望能够参与初创期的项目；
 \end{itemize}
 }
@@ -206,7 +200,7 @@
 \vspace{5mm}
 \subsection{ABB Drivetune}
 \vspace{3mm}
-\cventry{2021.08 - now\hspace{2.8mm}}{ABB Drivetune App}{}{}{}{%
+\cventry{2021.08 - 2023.08\hspace{2.0mm}}{ABB Drivetune App}{}{}{}{%
 }
 \vspace{1mm}
 \cvitem{Description:}{%
@@ -221,7 +215,7 @@
 \vspace{5mm}
 \subsection{Apple Metal 开发}
 \vspace{3mm}
-\cventry{2021.02 - 2021.06\hspace{2.8mm}}{个人项目}{}{}{}{%
+\cventry{2021.02 - 2021.06\hspace{2.0mm}}{个人项目}{}{}{}{%
 Metal  
 }
 \vspace{1mm}
@@ -234,7 +228,7 @@ Metal
 \vspace{5mm}
 \subsection{视频会议项目}
 \vspace{3mm}
-\cventry{2019.01 - 2020.03\hspace{2.8mm}}{厦门铃盛}{移动开发部}{厦门}{}{%
+\cventry{2019.01 - 2020.03\hspace{2.0mm}}{厦门铃盛}{移动开发部}{厦门}{}{%
 C++,Mac OS, Android Development.\newline{}%
 }
 \vspace{-2mm}
@@ -254,7 +248,7 @@ C++,Mac OS, Android Development.\newline{}%
 }
 \subsection{TTF Font icon 单元测试}
 \vspace{3mm}
-\cventry{2018.06 - 2018.07\hspace{2.8mm}}{厦门铃盛}{移动开发部}{厦门}{}{%
+\cventry{2018.06 - 2018.07\hspace{2.0mm}}{厦门铃盛}{移动开发部}{厦门}{}{%
 安卓开发\newline{}%
 }
 \vspace{-2mm}
@@ -275,7 +269,7 @@ C++,Mac OS, Android Development.\newline{}%
 
 \subsection{安卓Webrtc视频客户端}
 \vspace{3mm}
-\cventry{2017.12 - 2018.12\hspace{2.8mm}}{厦门铃盛}{移动开发部}{厦门}{}{%
+\cventry{2017.12 - 2018.12\hspace{2.0mm}}{厦门铃盛}{移动开发部}{厦门}{}{%
 安卓开发\newline{}%
 }
 \vspace{-2mm}
@@ -294,7 +288,7 @@ C++,Mac OS, Android Development.\newline{}%
 }
 \subsection{McAfee 安卓杀毒软件}
 \vspace{3mm}
-\cventry{2016.08 - 2017.07\hspace{2.8mm}}{英特尔 \& 迈克菲}{手机安全部}{深圳}{}{%
+\cventry{2016.08 - 2017.07\hspace{2.0mm}}{英特尔 \& 迈克菲}{手机安全部}{深圳}{}{%
 安卓开发\newline{}%
 }
 \vspace{-2mm}
@@ -312,7 +306,7 @@ C++,Mac OS, Android Development.\newline{}%
 
 \subsection{盒子支付钱盒项目}
 \vspace{3mm}
-\cventry{2014.07 - 2015.05\hspace{2.8mm}}{盒子支付有限公司}{软件部}{深圳}{}{%
+\cventry{2014.07 - 2015.05\hspace{2.0mm}}{盒子支付有限公司}{软件部}{深圳}{}{%
 安卓开发 \newline{}%
 }
 \vspace{-2mm}
@@ -335,7 +329,7 @@ C++,Mac OS, Android Development.\newline{}%
 
 \subsection{盒子支付架构组工作}
 \vspace{3mm}
-\cventry{2015.07 - 2016.03\hspace{2.8mm}}{盒子支付}{软件部}{深圳}{}{%
+\cventry{2015.07 - 2016.03\hspace{2.0mm}}{盒子支付}{软件部}{深圳}{}{%
 软件工程师\newline{}%
 }
 \vspace{-2mm}
@@ -360,7 +354,7 @@ C++,Mac OS, Android Development.\newline{}%
 \cvitem{}{}
 \subsection{蓝牙低功耗可穿戴设备项目}
 \vspace{3mm}
-\cventry{2013.10 - 2014.03\hspace{2.8mm}}{鼎智时代}{软件部}{深圳}{}{%
+\cventry{2013.10 - 2014.03\hspace{2.0mm}}{鼎智时代}{软件部}{深圳}{}{%
 安卓开发\newline{}%
 }
 \vspace{-2mm}
@@ -378,7 +372,7 @@ C++,Mac OS, Android Development.\newline{}%
 
 \subsection{展讯安卓平台工厂自动测试工具}
 \vspace{3mm}
-\cventry{2012.05 - 2012.07\hspace{2.8mm}}{鼎智通讯}{软件部}{深圳}{}{%
+\cventry{2012.05 - 2012.07\hspace{2.0mm}}{鼎智通讯}{软件部}{深圳}{}{%
 安卓rom开发\newline{}%
 }
 \vspace{-2mm}
@@ -397,7 +391,7 @@ C++,Mac OS, Android Development.\newline{}%
 
 \subsection{安卓系统开发}
 \vspace{3mm}
-\cventry{2010.05 - 2012.08\hspace{2.8mm}}{鼎智时代，鼎智通讯}{软件部}{深圳}{}{安卓rom开发维护\newline{}}
+\cventry{2010.05 - 2012.08\hspace{2.0mm}}{鼎智时代，鼎智通讯}{软件部}{深圳}{}{安卓rom开发维护\newline{}}
 \vspace{-2mm}
 \cvitem{描述:}{%
 \begin{itemize}
