--- a/moderncv_tex/mycv-en.tex
+++ b/moderncv_tex/mycv-en.tex
@@ -192,9 +192,10 @@
 \vspace{5mm}
 \cvitem{}{%
   \begin{itemize}
-  \item I look forward to works in C/C++ dev for mobile platforms (Android \& iOS);
-  \item I look forward to works in GPU programming field, e.g. Opengl and Metal.
-  \item I look forward to participating in a pioneering and cutting edge project.
+  \item I'm looking forward to working in Mobile Native \& Hybrid dev;
+  \item I'm looking forward to working in C/C++ dev for mobile platforms (Android \& iOS);
+  \item I'm looking forward to working in GPU programming field, e.g. Opengl and Metal.
+  \item I'm looking forward to participating in a pioneering and cutting edge project.
 \end{itemize}
 }
 
