add Flutter experience.

--- a/moderncv_tex/mycv-zh.tex
+++ b/moderncv_tex/mycv-zh.tex
@@ -79,6 +79,7 @@
 \cvitem{C/C++}{安卓系统HAL层和NDK开发经验}
 \cvitem{Java|Kotlin}{8年安卓应用开发和2年的安卓系统开发经验}
 \cvitem{Swift}{2年多iOS/Mac应用开发经验}
+\cvitem{Flutter}{熟悉Flutter生态}
 \cvitem{Vue2}{有mobile hybrid端的开发经验，使用Vue2, CSS, Typescript, JS.}
 \cvitem{Opengl|Metal}{图形学相关开发经验}
 \cvitem{.net core}{对Azure云计算有了解，对于.Net Core技术栈有了解.}
@@ -167,7 +168,6 @@
 \begin{itemize}
 \item {\small {2010.04 - 2012.01}, \small \emph {深圳鼎智时代}}
 \item {\small {2012.02 - 2012.08}, \small \emph {深圳鼎智通讯}}
-\item {\small {2012.08 - 2013.08}, \emph {离职}}  
 \item {\small {2013.09 - 2014.04}, \small \emph {深圳鼎智时代}}
 \end{itemize}
 }
@@ -176,16 +176,6 @@
 \begin{itemize}
 \item {\small \emph {安卓HAL硬件适配层开发维护}}
 \item {\small \emph {Marvell, 展讯, 高通, 全志平台开发维护}}
-\end{itemize}
-}
-
-\section{工作期望}
-\vspace{5mm}
-\cvitem{}{%
-  \begin{itemize}
-  \item 期望从事安卓/iOS NDK/C++开发；
-  \item 期望从事OpenGL, WebGL, Metal, Vulkan等GPU图形编程相关的工作；
-  \item 期望能够参与初创期的项目；
 \end{itemize}
 }
 
