--- a/moderncv_tex/mycv-en.tex
+++ b/moderncv_tex/mycv-en.tex
@@ -80,6 +80,7 @@
 \cvitem{C/C++}{Android system HAL layer dev and android NDK dev experience.}
 \cvitem{Java|Kotlin}{8+ Years Android App \& System Programming experience.}
 \cvitem{Swift}{2+ Years iOS/Mac app dev experience.}
+\cvitem{Flutter}{Familiar Flutter dev.}
 \cvitem{Vue2}{Familiar with Vue2 and mobile side hybrid dev.}
 \cvitem{Opengl|Metal}{Graphics Rendering experience.}
 \cvitem{.net core}{Limited experience with .net core and azure app service.}
@@ -168,7 +169,6 @@
 \begin{itemize}
 \item {\small {2010.04 - 2012.01}, \small \emph {Topwise3g Co., Ltd.}}
 \item {\small {2012.02 - 2012.08}, \small \emph {Topwise Co., Ltd.}}
-\item {\small {2012.08 - 2013.08}, \emph {Free Developer}, \small {Resignation}}  
 \item {\small {2013.09 - 2014.04}, \small \emph {Topwise3g Co., Ltd.}}
 \end{itemize}
 }
@@ -177,17 +177,6 @@
 \begin{itemize}
 \item {\small \emph {Android System HAL layer development}}
 \item {\small \emph {Marvell, Spreadtrum, Qualcomm, Allwinner Android platform Development}}
-\end{itemize}
-}
-
-\section{Job Expectation \& Self Evaluation}
-\vspace{5mm}
-\cvitem{}{%
-  \begin{itemize}
-  \item I'm looking forward to working in Mobile Native \& Hybrid dev;
-  \item I'm looking forward to working in C/C++ dev for mobile platforms (Android \& iOS);
-  \item I'm looking forward to working in GPU programming field, e.g. Opengl and Metal.
-  \item I'm looking forward to participating in a pioneering and cutting edge project.
 \end{itemize}
 }
 
